--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@smastrom/react-rating": "^1.3.1",
     "bootstrap": "^5.2.3",
     "firebase": "^9.21.0",
+    "leaflet": "^1.9.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -20,13 +21,16 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-lazy-load": "^4.0.1",
+    "react-leaflet": "^4.2.1",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.11.0",
     "react-to-pdf": "^0.0.14",
     "react-toastify": "^9.1.2",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "swiper": "^9.2.4"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
